app/ui/components/ContactLinks/ContactLinks.module.scss
@use '@/app/assets/styles/style-library/all-vars' as vars;

.contactLinks {
	display: flex;
	align-items: flex-start;
	text-align: left;
	gap: 2rem;
	flex-wrap: wrap;
	justify-content: space-between;

	@mixin itemDefaults {
		list-style: none;
		flex-shrink: 0;
		display: flex;
		align-items: center;
		justify-content: center;
		a, button {
			display: flex;
			align-items: center;
			justify-content: center;
			gap: 0.5em;
		}
		svg{
			color: var(--color-fg);
			height: 22px;
		}
	}
	&__item {
		@include itemDefaults;
	}
	&__item____fullWidth {
		@include itemDefaults;
		width: 100%;
	}
}

.trigger {
	position: relative;
	margin-bottom: 0;
	padding-bottom: 0;
	@include vars.standalone-link;
}

.tooltip {
	position: absolute;
	display: block;
	padding: 0.5em 0.7em;
	top: 50%;
	right: -0.8em;
	transform: translate(100%, -50%);
	background: black;
	@include vars.text-miniscule;
}

